--- a/MAML_single_neuron.ipynb
+++ b/MAML_single_neuron.ipynb
@@ -10,7 +10,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-03-15 18:12:53.863806: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.10.1\n"
+      "2025-03-16 03:26:51.026200: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.10.1\n",
+      "2025-03-16 03:27:21.150733: I tensorflow/compiler/jit/xla_cpu_device.cc:41] Not creating XLA devices, tf_xla_enable_xla_devices not set\n",
+      "2025-03-16 03:27:21.199284: W tensorflow/stream_executor/platform/default/dso_loader.cc:60] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-12.3.0/mvapich2-2.3.7-1-qv3gjagtbx5e3rlbdy6iy2sfczryftyt/lib:/opt/slurm/current/lib:/opt/pmix/4.2.6/lib:/usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-12.3.0/libpciaccess-0.17-pjfe4ct4gfm5k26s36hmewhbz4k232dl/lib:/usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-11.3.1/gcc-12.3.0-ukkkutsxfl5kpnnaxflpkq2jtliwthfz/lib64:/usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-11.3.1/gcc-12.3.0-ukkkutsxfl5kpnnaxflpkq2jtliwthfz/lib:/usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-12.3.0/zlib-1.2.13-3qhjpij2pji47kfanmlflvwk5ljcn5lh/lib:/usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-12.3.0/mpc-1.3.1-3zvixith5i243hwiill4exyu3lf2q6ad/lib:/usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-12.3.0/mpfr-4.2.0-tox4bdsc25zr763rnq5gzlukfbvw7uj7/lib:/usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-12.3.0/gmp-6.2.1-n7dzsse5e3f6w5z6q6cuqursydg6yypo/lib::\n",
+      "2025-03-16 03:27:21.215924: W tensorflow/stream_executor/cuda/cuda_driver.cc:326] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2025-03-16 03:27:21.224314: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (login-phoenix-rh9-2.pace.gatech.edu): /proc/driver/nvidia/version does not exist\n",
+      "2025-03-16 03:27:21.270178: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-03-16 03:27:21.272155: I tensorflow/compiler/jit/xla_gpu_device.cc:99] Not creating XLA devices, tf_xla_enable_xla_devices not set\n"
      ]
     },
     {
@@ -20,7 +27,21 @@
       "Inner Model's initial weights before inner loop are\n",
       "[[1.0]\n",
       " [-4.0]]\n",
-      "Model output is: [[0.04742587]]\n",
+      "Model output is: [[0.04742587]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2460114/3832731504.py:68: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  print(np.array(self.model.trainable_weights))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Support loss is 3.0486\n",
       "Inner loop gradients are\n",
       "[[-0.9525721073150635]\n",
@@ -44,24 +65,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-03-15 18:12:58.707506: I tensorflow/compiler/jit/xla_cpu_device.cc:41] Not creating XLA devices, tf_xla_enable_xla_devices not set\n",
-      "2025-03-15 18:12:58.708932: W tensorflow/stream_executor/platform/default/dso_loader.cc:60] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-12.3.0/mvapich2-2.3.7-1-qv3gjagtbx5e3rlbdy6iy2sfczryftyt/lib:/opt/slurm/current/lib:/opt/pmix/4.2.6/lib:/usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-12.3.0/libpciaccess-0.17-pjfe4ct4gfm5k26s36hmewhbz4k232dl/lib:/usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-11.3.1/gcc-12.3.0-ukkkutsxfl5kpnnaxflpkq2jtliwthfz/lib64:/usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-11.3.1/gcc-12.3.0-ukkkutsxfl5kpnnaxflpkq2jtliwthfz/lib:/usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-12.3.0/zlib-1.2.13-3qhjpij2pji47kfanmlflvwk5ljcn5lh/lib:/usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-12.3.0/mpc-1.3.1-3zvixith5i243hwiill4exyu3lf2q6ad/lib:/usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-12.3.0/mpfr-4.2.0-tox4bdsc25zr763rnq5gzlukfbvw7uj7/lib:/usr/local/pace-apps/spack/packages/linux-rhel9-x86_64_v3/gcc-12.3.0/gmp-6.2.1-n7dzsse5e3f6w5z6q6cuqursydg6yypo/lib::\n",
-      "2025-03-15 18:12:58.709267: W tensorflow/stream_executor/cuda/cuda_driver.cc:326] failed call to cuInit: UNKNOWN ERROR (303)\n",
-      "2025-03-15 18:12:58.709444: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (login-phoenix-rh9-2.pace.gatech.edu): /proc/driver/nvidia/version does not exist\n",
-      "2025-03-15 18:12:58.711481: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX512F FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-03-15 18:12:58.712773: I tensorflow/compiler/jit/xla_gpu_device.cc:99] Not creating XLA devices, tf_xla_enable_xla_devices not set\n",
-      "/tmp/ipykernel_2188808/541655227.py:79: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
-      "  print(np.array(self.model.trainable_weights))\n",
-      "/tmp/ipykernel_2188808/541655227.py:87: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "/tmp/ipykernel_2460114/3832731504.py:76: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
       "  print(np.array(grads))\n",
-      "/tmp/ipykernel_2188808/541655227.py:90: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "/tmp/ipykernel_2460114/3832731504.py:79: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
       "  print(np.array(weights))\n",
-      "/tmp/ipykernel_2188808/541655227.py:101: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "/tmp/ipykernel_2460114/3832731504.py:90: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
       "  print(np.array(self.model.trainable_variables))\n",
-      "/tmp/ipykernel_2188808/541655227.py:105: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "/tmp/ipykernel_2460114/3832731504.py:94: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
       "  print(np.array(meta_gradients))\n",
-      "/tmp/ipykernel_2188808/541655227.py:108: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "/tmp/ipykernel_2460114/3832731504.py:97: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
       "  print(np.array(self.model.trainable_variables))\n"
      ]
     }
@@ -69,17 +81,6 @@
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "import tensorflow.keras.backend as K\n",
-    "from tensorflow.keras.models import clone_model\n",
-    "import tensorflow as tf\n",
-    "import gc\n",
-    "import tracemalloc\n",
-    "import random\n",
-    "import copy\n",
-    "from tensorflow.keras import utils as np_utils\n",
-    "from tensorflow.keras import metrics\n",
-    "from random import shuffle\n",
-    "from copy import deepcopy, copy\n",
     "tf.compat.v1.enable_eager_execution()\n",
     "\n",
     "num_classes = 2  # Example binary classification\n",
@@ -141,8 +142,8 @@
     "        for w_model, w_new in zip(self.model.trainable_variables, weights):\n",
     "            w_model.assign(w_new)\n",
     "\n",
-    "    def updateMAML(self):\n",
-    "        def taskLoss(batch):\n",
+    "    def TrainMAML(self):\n",
+    "        def InnerUpdate(batch):\n",
     "            support_x,support_y,query_x,query_y = batch            \n",
     "            print(\"Inner Model's initial weights before inner loop are\")\n",
     "            print(np.array(self.model.trainable_weights))\n",
@@ -164,7 +165,7 @@
     "        with tf.GradientTape() as tape:\n",
     "            # loss = tf.map_fn(taskLoss, elems=batch,fn_output_signature=tf.float32)\n",
     "            # loss = tf.reduce_sum(batchLoss)\n",
-    "            loss = taskLoss(batch)\n",
+    "            loss = InnerUpdate(batch)\n",
     "        \n",
     "        print(\"Meta Model's weights before outer loop adaptation are\")\n",
     "        print(np.array(self.model.trainable_variables))\n",
@@ -177,7 +178,7 @@
     "        print(np.array(self.model.trainable_variables))\n",
     "        \n",
     "maml = MAML()\n",
-    "meta_model = maml.updateMAML()\n"
+    "meta_model = maml.TrainMAML()\n"
    ]
   }
  ],
